<package format="2">
  <name>qb_hand</name>
  <version>2.1.2</version>
  <description>
    This package contains the ROS interface for qbrobotics® qbhand device.
  </description>
  <author>qbrobotics®</author>
  <maintainer email="alessandro.tondo@qbrobotics.com">Alessandro Tondo</maintainer>
  <license>BSD 3-Clause</license>

  <url type="bugtracker">https://bitbucket.org/qbrobotics/qbhand-ros/issues</url>
  <url type="repository">https://bitbucket.org/qbrobotics/qbhand-ros</url>
  <url type="website">http://wiki.ros.org/qb_hand</url>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>qb_hand_control</exec_depend>
  <exec_depend>qb_hand_description</exec_depend>
  <exec_depend>qb_hand_hardware_interface</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>